--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -371,6 +371,7 @@ footer {
 	    border: none;
 	    min-height: 100%;
 	    padding: 100px 0;
+	    z-index: 2000;
 	    text-align: center;
 		h2 {
 	    	margin: 0;
