--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -394,6 +394,7 @@ footer .footer-below {
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    z-index: 2000;
 }
 
 .portfolio-modal .modal-content h2 {
